welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:10: error: '<-' expected but ')' found.
		for (i -< 1 to getMondeLargeur){
                                              ^LineByLine:20: error: illegal start of simple expression
	}
        ^